--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /* Header  */
 header {
     width: 1440px;
@@ -8,7 +7,7 @@ header {
 
 }
 
-.main_logo{
+.main_logo {
     vertical-align: middle;
     margin-right: 688px;
 }
@@ -31,14 +30,57 @@ header {
 .no_active {
     color: #FFFFFF;
 }
-.middle_li{
-    margin-inline: 80px
-    ;
+
+.middle_li {
+    margin-inline: 80px;
 }
 
 /* Cover image  */
 
-.cover_1{
+.cover_1 {
     display: block;
     margin: auto;
+}
+
+
+/* Section  */
+section {
+    display: block;
+    margin: auto;
+    width: 1440px;
+    background-color: #C2F3EE;
+    padding-block: 80px;
+    padding-left: 130px;
+}
+
+.section_image {
+    margin-right: 120px;
+    vertical-align: top;
+}
+
+/* Article  */
+article {
+    display: inline-block;
+    margin: auto;
+    width: 457px;
+    vertical-align: top;
+
+}
+
+.section_article_title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0.005em;
+    font-family: "Poppins", sans-serif;
+}
+
+.section_article_text {
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.005em;
+    font-family: "Poppins", sans-serif;
+
 }
