--- a/css/style.css
+++ b/css/style.css
@@ -128,21 +128,30 @@ footer {
     font-family: "Poppins", sans-serif;
 }
 
-.logo_3{
-vertical-align: middle;
+nav {
+    display: inline-block;
+    margin: auto;
 }
 
-.nav_ul_li{
-font-size: 18px;
-font-weight: 400;
-line-height: 27px;
-font-family: "Poppins", sans-serif;
-color: #FFFFFF;
-display: inline-block;
-margin: auto;
-vertical-align: middle;
+.nav_ul_li {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    font-family: "Poppins", sans-serif;
+    color: #FFFFFF;
+    margin-left: 934px;
 }
 
-.nav_title{
- color: #FFFFFF;
+.nav_title {
+    color: #FFFFFF;
+    margin-left: 934px;
+    margin-bottom: 24px;
+    font-family: "Poppins", sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 30px;
+
+
+
+
 }
